most things work

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "lkaemmerling/laravel-horizon-prometheus-exporter": "^1.8",
         "open-telemetry/exporter-otlp": "^1.2",
         "open-telemetry/opentelemetry-auto-laravel": "^1.1",
+        "open-telemetry/opentelemetry-auto-psr18": "^1.1",
+        "open-telemetry/sdk": "^1.2",
         "predis/predis": "^2.3",
         "spatie/laravel-prometheus": "^1.2"
     },
