--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,24 @@ services:
       - OCTANE_SERVER=frankenphp
       - QUEUE_CONNECTION=redis
       - QUEUE_DRIVER=redis
+      - QUEUE_FAILED_DRIVER=redis
       - HORIZON_ENVIRONMENT=local
       - APP_ENV=local
       - HORIZON_PREFIX=local
+      - TEMPO_ENDPOINT=http://tempo:4318/v1/traces
+      # OpenTelemetry auto-instrumentation
+      - OTEL_PHP_AUTOLOAD_ENABLED=true
+      - OTEL_SERVICE_NAME=${APP_NAME:-laravel-grafana-prometheus-loki-tempo}
+      - OTEL_TRACES_SAMPLER=always_on
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=otlp
+      - OTEL_LOGS_EXPORTER=none
+      - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4318
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://tempo:4318/v1/traces
+      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://prometheus:9090/api/v1/otlp/v1/metrics
+      - OTEL_PROPAGATORS=baggage,tracecontext
+      - OTEL_PHP_TRACES_PROCESSOR=simple
   # FrankenPHP Service for Web with Octane and Horizon (Production)
   redis:
     image: redis:alpine
@@ -210,8 +225,9 @@ services:
       - "4317:4317" # OTLP gRPC
       - "4318:4318" # OTLP HTTP
     volumes:
-      - tempo-data:/var/lib/tempo
       - ./docker/tempo/tempo-config.yaml:/etc/tempo/tempo-config.yaml
+      - /tmp/tempo:/tmp/tempo
+    user: "0"
     networks:
       - app-network
 
