--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -30,6 +30,13 @@ scrape_configs:
     static_configs:
       - targets: ["app:80"]
 
+  # Tempo for trace metrics
+  - job_name: "tempo"
+    scrape_interval: 15s
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["tempo:3200"]
+
   # Redis exporter
   - job_name: "redis"
     static_configs:
