--- a/docker/tempo/tempo-config.yaml
+++ b/docker/tempo/tempo-config.yaml
@@ -6,24 +6,26 @@ distributor:
     otlp:
       protocols:
         http:
+          endpoint: "0.0.0.0:4318"
         grpc:
+          endpoint: "0.0.0.0:4317"
 
 ingester:
   trace_idle_period: 10s
   max_block_duration: 5m
   complete_block_timeout: 5m
 
+storage:
+  trace:
+    backend: local
+    wal:
+      path: /tmp/tempo/wal
+    local:
+      path: /tmp/tempo/blocks
+
 compactor:
   compaction:
     compaction_window: 1h
     max_compaction_objects: 1000000
     block_retention: 1h
-    compacted_block_retention: 10m
-
-storage:
-  trace:
-    backend: local
-    wal:
-      path: /var/lib/tempo/wal
-    local:
-      path: /var/lib/tempo/blocks 
+    compacted_block_retention: 10m 
